# illuminate

./: LICENSE  README  Setup.hs  TODO  illuminate.cabal  illuminate.hs
Text/Highlighting/: Illuminate.hs
Text/Highlighting/Illuminate/: Alex.x  BibTeX.x  C.x  CPlusPlus.x  CSS.x  CSharp.x  Cabal.x  D.x  Diff.x  Format.hs  HTML.x  Haskell.x  Java.x  Javascript.x  LaTeX.x  LiterateHaskell.x  Python.x  RHTML.x  RXML.x  Ruby.x  Sh.x  TeX.x  Token.hs  Types.hs  XML.x
alex/: AlexTemplate-ghc  AlexWrapper-illuminate
