Name:                illuminate
Version:             0.1
Cabal-Version:       >= 1.6
Build-Type:          Custom
Category:            Text
Synopsis:            A fast syntax highlighting library built with alex. 
Description:         illuminate is a source-code syntax highlighting
                     library and a command-line highlighting tool.
                     It can produce output in HTML, XHTML, LaTeX, or
                     ANSI. It is smaller, less memory-hungry, and
                     much faster than highlighting-kate.

License:             BSD3
License-file:        LICENSE
Author:              John MacFarlane
Maintainer:          jgm@berkeley.edu
Homepage:            http://github.com/jgm/illuminate
Extra-Source-Files:  Text/Highlighting/Illuminate/Alex.x
                     Text/Highlighting/Illuminate/BibTeX.x
                     Text/Highlighting/Illuminate/C.x
                     Text/Highlighting/Illuminate/Cabal.x
                     Text/Highlighting/Illuminate/CPlusPlus.x
                     Text/Highlighting/Illuminate/CSharp.x
                     Text/Highlighting/Illuminate/CSS.x
                     Text/Highlighting/Illuminate/D.x
                     Text/Highlighting/Illuminate/Diff.x
                     Text/Highlighting/Illuminate/Haskell.x
                     Text/Highlighting/Illuminate/HTML.x
                     Text/Highlighting/Illuminate/Java.x
                     Text/Highlighting/Illuminate/Javascript.x
                     Text/Highlighting/Illuminate/LiterateHaskell.x
                     Text/Highlighting/Illuminate/Python.x
                     Text/Highlighting/Illuminate/RHTML.x
                     Text/Highlighting/Illuminate/RXML.x
                     Text/Highlighting/Illuminate/Ruby.x
                     Text/Highlighting/Illuminate/Sh.x
                     Text/Highlighting/Illuminate/TeX.x
                     Text/Highlighting/Illuminate/XML.x
                     alex/AlexWrapper-illuminate
                     alex/AlexTemplate-ghc

Flag executable
  Description:       Build the executable.
  Default:           True

Library
  Build-Depends:     base >= 3 && < 5, containers, xhtml, html, utf8-string,
                     hscolour, filemanip, filepath
  Build-Tools:       alex >= 2 && < 3
  Exposed-Modules:   Text.Highlighting.Illuminate
                     Text.Highlighting.Illuminate.Types
                     Text.Highlighting.Illuminate.Format
                     Text.Highlighting.Illuminate.Alex
                     Text.Highlighting.Illuminate.BibTeX
                     Text.Highlighting.Illuminate.C
                     Text.Highlighting.Illuminate.Cabal
                     Text.Highlighting.Illuminate.CPlusPlus
                     Text.Highlighting.Illuminate.CSharp
                     Text.Highlighting.Illuminate.CSS
                     Text.Highlighting.Illuminate.D
                     Text.Highlighting.Illuminate.Diff
                     Text.Highlighting.Illuminate.Haskell
                     Text.Highlighting.Illuminate.HTML
                     Text.Highlighting.Illuminate.Java
                     Text.Highlighting.Illuminate.Javascript
                     Text.Highlighting.Illuminate.LiterateHaskell
                     Text.Highlighting.Illuminate.Python
                     Text.Highlighting.Illuminate.RHTML
                     Text.Highlighting.Illuminate.RXML
                     Text.Highlighting.Illuminate.Ruby
                     Text.Highlighting.Illuminate.Sh
                     Text.Highlighting.Illuminate.TeX
                     Text.Highlighting.Illuminate.XML
  Ghc-Options:       -Wall -funbox-strict-fields
  Ghc-Prof-Options:  -auto-all -caf-all -O0

Source-repository head
  type:          git
  location:      git://github.com/jgm/illuminate.git

Executable illuminate
  Main-Is:           illuminate.hs
  Build-depends:     base >= 3 && <5, array, containers, xhtml, html
  Other-modules:     Text.Highlighting.Illuminate.Alex
                     Text.Highlighting.Illuminate.C
                     Text.Highlighting.Illuminate.BibTeX
                     Text.Highlighting.Illuminate.Cabal
                     Text.Highlighting.Illuminate.CPlusPlus
                     Text.Highlighting.Illuminate.CSharp
                     Text.Highlighting.Illuminate.CSS
                     Text.Highlighting.Illuminate.D
                     Text.Highlighting.Illuminate.Diff
                     Text.Highlighting.Illuminate.Haskell
                     Text.Highlighting.Illuminate.HTML
                     Text.Highlighting.Illuminate.Java
                     Text.Highlighting.Illuminate.Javascript
                     Text.Highlighting.Illuminate.LiterateHaskell
                     Text.Highlighting.Illuminate.Python
                     Text.Highlighting.Illuminate.RHTML
                     Text.Highlighting.Illuminate.RXML
                     Text.Highlighting.Illuminate.Ruby
                     Text.Highlighting.Illuminate.Sh
                     Text.Highlighting.Illuminate.TeX
                     Text.Highlighting.Illuminate.XML
  Build-Tools:       alex >= 2 && < 3
  Ghc-Options:       -Wall -funbox-strict-fields
  Ghc-Prof-Options:  -auto-all -caf-all -O0
  if flag(executable)
    Buildable:      True
  else
    Buildable:      False

